--- a/nosotros.html
+++ b/nosotros.html
@@ -17,25 +17,12 @@
     </header>
 
     <nav class="navegacion">
-        <a class="navegacion__enlace navegacion__enlace--activo" href="index.html">Tienda</a>
-        <a class="navegacion__enlace" href="nosotros.html">Nosotros</a>
+        <a class="navegacion__enlace " href="index.html">Tienda</a>
+        <a class="navegacion__enlace navegacion__enlace--activo" href="nosotros.html">Nosotros</a>
     </nav>
 
     <main class="contenedor">
-        <h1>Nuestros Productos</h1>
-
-        <div class="grid">
-            <div class="producto">
-                <a href="producto.html">
-                    <img class="producto__informacion" src="img/1.jpg" alt="imagen camisa">
-                    <p class="producto__nombre">Vue.js</p>
-                    <p class="producto__precio">$200</p>
-                </a>
-            </div>
-        </div>
-
-
-
+        <h1>Nosotros</h1>
     </main>
 
     <footer class="footer">
