--- a/producto.html
+++ b/producto.html
@@ -22,20 +22,7 @@
     </nav>
 
     <main class="contenedor">
-        <h1>Nuestros Productos</h1>
-
-        <div class="grid">
-            <div class="producto">
-                <a href="producto.html">
-                    <img class="producto__informacion" src="img/1.jpg" alt="imagen camisa">
-                    <p class="producto__nombre">Vue.js</p>
-                    <p class="producto__precio">$200</p>
-                </a>
-            </div>
-        </div>
-
-
-
+        <h1>Producto</h1>
     </main>
 
     <footer class="footer">
