--- a/index.html
+++ b/index.html
@@ -27,15 +27,135 @@
         <div class="grid">
             <div class="producto">
                 <a href="producto.html">
-                    <img class="producto__informacion" src="img/1.jpg" alt="imagen camisa">
-                    <p class="producto__nombre">Vue.js</p>
-                    <p class="producto__precio">$200</p>
+                    <img class="producto__imagen" src="img/1.jpg" alt="imagen camisa">
+                    <div class="producto__informacion">
+                        <p class="producto__nombre">Vue</p>
+                        <p class="producto__precio">$200</p>
+                    </div>
                 </a>
-            </div>
+            </div> <!--Aca termina el div de producto-->
+            <div class="producto">
+                <a href="producto.html">
+                    <img class="producto__imagen" src="img/2.jpg" alt="imagen camisa">
+                    <div class="producto__informacion">
+                        <p class="producto__nombre">Angular</p>
+                        <p class="producto__precio">$200</p>
+                    </div>
+                </a>
+            </div> <!--Aca termina el div de producto-->
+            <div class="producto">
+                <a href="producto.html">
+                    <img class="producto__imagen" src="img/3.jpg" alt="imagen camisa">
+                    <div class="producto__informacion">
+                        <p class="producto__nombre">React</p>
+                        <p class="producto__precio">$200</p>
+                    </div>
+                </a>
+            </div> <!--Aca termina el div de producto-->
+            <div class="producto">
+                <a href="producto.html">
+                    <img class="producto__imagen" src="img/4.jpg" alt="imagen camisa">
+                    <div class="producto__informacion">
+                        <p class="producto__nombre">Redux</p>
+                        <p class="producto__precio">$200</p>
+                    </div>
+                </a>
+            </div> <!--Aca termina el div de producto-->
+            <div class="producto">
+                <a href="producto.html">
+                    <img class="producto__imagen" src="img/5.jpg" alt="imagen camisa">
+                    <div class="producto__informacion">
+                        <p class="producto__nombre">Node</p>
+                        <p class="producto__precio">$200</p>
+                    </div>
+                </a>
+            </div> <!--Aca termina el div de producto-->
+            <div class="producto">
+                <a href="producto.html">
+                    <img class="producto__imagen" src="img/6.jpg" alt="imagen camisa">
+                    <div class="producto__informacion">
+                        <p class="producto__nombre">Sass</p>
+                        <p class="producto__precio">$200</p>
+                    </div>
+                </a>
+            </div> <!--Aca termina el div de producto-->
+            <div class="producto">
+                <a href="producto.html">
+                    <img class="producto__imagen" src="img/7.jpg" alt="imagen camisa">
+                    <div class="producto__informacion">
+                        <p class="producto__nombre">Html</p>
+                        <p class="producto__precio">$200</p>
+                    </div>
+                </a>
+            </div> <!--Aca termina el div de producto-->
+            <div class="producto">
+                <a href="producto.html">
+                    <img class="producto__imagen" src="img/8.jpg" alt="imagen camisa">
+                    <div class="producto__informacion">
+                        <p class="producto__nombre">GitHub</p>
+                        <p class="producto__precio">$200</p>
+                    </div>
+                </a>
+            </div> <!--Aca termina el div de producto-->
+            <div class="producto">
+                <a href="producto.html">
+                    <img class="producto__imagen" src="img/9.jpg" alt="imagen camisa">
+                    <div class="producto__informacion">
+                        <p class="producto__nombre">Bulma</p>
+                        <p class="producto__precio">$200</p>
+                    </div>
+                </a>
+            </div> <!--Aca termina el div de producto-->
+            <div class="producto">
+                <a href="producto.html">
+                    <img class="producto__imagen" src="img/10.jpg" alt="imagen camisa">
+                    <div class="producto__informacion">
+                        <p class="producto__nombre">TypeScript</p>
+                        <p class="producto__precio">$200</p>
+                    </div>
+                </a>
+            </div> <!--Aca termina el div de producto-->
+            <div class="producto">
+                <a href="producto.html">
+                    <img class="producto__imagen" src="img/11.jpg" alt="imagen camisa">
+                    <div class="producto__informacion">
+                        <p class="producto__nombre">Drupal</p>
+                        <p class="producto__precio">$200</p>
+                    </div>
+                </a>
+            </div> <!--Aca termina el div de producto-->
+            <div class="producto">
+                <a href="producto.html">
+                    <img class="producto__imagen" src="img/12.jpg" alt="imagen camisa">
+                    <div class="producto__informacion">
+                        <p class="producto__nombre">JavaScript</p>
+                        <p class="producto__precio">$200</p>
+                    </div>
+                </a>
+            </div> <!--Aca termina el div de producto-->
+            <div class="producto">
+                <a href="producto.html">
+                    <img class="producto__imagen" src="img/13.jpg" alt="imagen camisa">
+                    <div class="producto__informacion">
+                        <p class="producto__nombre">GraphQL</p>
+                        <p class="producto__precio">$200</p>
+                    </div>
+                </a>
+            </div> <!--Aca termina el div de producto-->
+            <div class="producto">
+                <a href="producto.html">
+                    <img class="producto__imagen" src="img/14.jpg" alt="imagen camisa">
+                    <div class="producto__informacion">
+                        <p class="producto__nombre">WorldPress</p>
+                        <p class="producto__precio">$200</p>
+                    </div>
+                </a>
+            </div> <!--Aca termina el div de producto-->
+
+            <div class="grafico grafico--camisas"></div>
+            <div class="grafico grafico--node"></div>
+
         </div>
-
-
-
     </main>
 
     <footer class="footer">
