comenzando a editar nosotros page

--- a/nosotros.html
+++ b/nosotros.html
@@ -23,6 +23,12 @@
 
     <main class="contenedor">
         <h1>Nosotros</h1>
+        <div class="nosotros">
+            <div class="nosotros__texto">Nosotros nos dedicamos a utilizar las mejores telas para lograr las camisetas de mayor calidad del mercado.
+                Confia en nosotros, desde la primera compra hasta que te llegue el producto y puedas disfrutarlo.
+            </div>
+            <img class="nosotros__imagen" src="img/nosotros.jpg" alt="chica utilizando camisa">
+        </div>
     </main>
 
     <footer class="footer">
