nosotros.html finalizada

--- a/nosotros.html
+++ b/nosotros.html
@@ -24,12 +24,50 @@
     <main class="contenedor">
         <h1>Nosotros</h1>
         <div class="nosotros">
-            <div class="nosotros__texto">Nosotros nos dedicamos a utilizar las mejores telas para lograr las camisetas de mayor calidad del mercado.
-                Confia en nosotros, desde la primera compra hasta que te llegue el producto y puedas disfrutarlo.
+            <div class="nosotros__texto">Lorem ipsum dolor sit amet, 
+                consectetur adipiscing elit. Duis id nisl ut risus accumsan euismod. 
+                Maecenas commodo nec nulla tempor aliquet. Nunc non lorem at dolor finibus porttitor. 
+                Phasellus porttitor placerat augue, et rhoncus urna eleifend at. Donec a maximus metus. 
+                Nulla aliquam ut tortor ac suscipit. Curabitur vehicula eros a lectus lacinia fermentum. 
+                Cras in nibh risus. Vivamus sit amet lacus suscipit metus venenatis volutpat non vitae arcu. 
+                Suspendisse facilisis, mauris in sagittis sodales, elit leo facilisis massa, vel fermentum nisl mi vel velit. 
+                Cras consequat id mi sit amet tristique. Mauris fermentum leo et maximus consectetur. 
+                Quisque sollicitudin, velit id tincidunt malesuada, tortor augue rutrum mauris, vitae luctus felis eros ac turpis. 
+                Nam ullamcorper mauris ac faucibus commodo.Lorem ipsum dolor sit amet, consectetur adipiscing elit.
             </div>
             <img class="nosotros__imagen" src="img/nosotros.jpg" alt="chica utilizando camisa">
         </div>
     </main>
+
+    <section class="contenedor comprar">
+        <h2 class="comprar__titulo">¿Porque comprar con nosotros?</h2>
+        <div class="bloques">
+            <div class="bloque">
+                <img class="bloque__imagen" src="img/icono_1.png" alt="">
+                <h3 class="bloque__titulo">El Mejor Precio</h3>
+                <p class="bloque__contenido">mauris, vitae luctus felis eros ac turpis. 
+                    Nam ullamcorper mauris ac faucibus commodo.Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
+            </div>
+            <div class="bloque">
+                <img class="bloque__imagen" src="img/icono_2.png" alt="">
+                <h3 class="bloque__titulo">Para devs</h3>
+                <p class="bloque__contenido">mauris, vitae luctus felis eros ac turpis. 
+                    Nam ullamcorper mauris ac faucibus commodo.Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
+            </div>
+            <div class="bloque">
+                <img class="bloque__imagen" src="img/icono_3.png" alt="">
+                <h3 class="bloque__titulo">Envio gratis</h3>
+                <p class="bloque__contenido">mauris, vitae luctus felis eros ac turpis. 
+                    Nam ullamcorper mauris ac faucibus commodo.Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
+            </div>
+            <div class="bloque">
+                <img class="bloque__imagen" src="img/icono_4.png" alt="">
+                <h3 class="bloque__titulo">La mejor calidad</h3>
+                <p class="bloque__contenido">mauris, vitae luctus felis eros ac turpis. 
+                    Nam ullamcorper mauris ac faucibus commodo.Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
+            </div>
+        </div>
+    </section>
 
     <footer class="footer">
         <p class="footer__texto">Front End Store - Todos los derechos Reservados 2022</p>
