dando estilo a pagina de Producto

--- a/producto.html
+++ b/producto.html
@@ -23,6 +23,28 @@
 
     <main class="contenedor">
         <h1>Producto</h1>
+
+        <div class="camisa">
+            <img class="camisa__imagen" src="img/3.jpg" alt="Imagen del producto">
+
+            <div class="camisa__contenido">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                    Blanditiis eveniet, nostrum quo unde ab, molestiae aliquid odit omnis sapiente velit quis fuga 
+                    aspernatur quisquam corporis sunt nam est tempora explicabo!</p>
+
+                <form class="formulario">
+                    <select class="formulario__campo">
+                        <option selected disabled>--Seleccionar Talla--</option>
+                        <option>S</option>
+                        <option>M</option>
+                        <option>L</option>
+                        <option>XL</option>
+                    </select>
+                    <input class="formulario__campo" type="number" placeholder="Cantidad" min="1" max="10">
+                    <input class="formulario__submit" type="submit" value="Agregar al carrito">
+                </form>    
+            </div>
+        </div>
     </main>
 
     <footer class="footer">
